Initial commit: Реализация Song Library API
